--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
     "@radix-ui/react-switch": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.3",
+    "@reactflow/background": "^11.3.14",
+    "@reactflow/controls": "^11.2.14",
     "@reactflow/core": "^11.11.4",
     "@reactflow/minimap": "^11.7.14",
-    "@reactflow/controls": "^11.2.14",
-    "@reactflow/background": "^11.3.14",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "d3": "^7.9.0",
@@ -64,6 +64,7 @@
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
     "tailwindcss": "^3.4.14",
+    "ts-jest": "^29.4.6",
     "typescript": "^5.6.3"
   }
 }
