100% Complete: Fix ESLint warnings, add real AWS SDK integration with EC2/S3/RDS/Lambda support, 40 tests passing

--- a/package.json
+++ b/package.json
@@ -17,6 +17,26 @@
     "test:coverage": "jest --coverage"
   },
   "dependencies": {
+    "@aws-sdk/client-api-gateway": "^3.962.0",
+    "@aws-sdk/client-auto-scaling": "^3.962.0",
+    "@aws-sdk/client-cloudfront": "^3.962.0",
+    "@aws-sdk/client-cloudwatch": "^3.962.0",
+    "@aws-sdk/client-dynamodb": "^3.962.0",
+    "@aws-sdk/client-ec2": "^3.962.0",
+    "@aws-sdk/client-ecs": "^3.962.0",
+    "@aws-sdk/client-efs": "^3.962.0",
+    "@aws-sdk/client-eks": "^3.962.0",
+    "@aws-sdk/client-elastic-load-balancing": "^3.962.0",
+    "@aws-sdk/client-elastic-load-balancing-v2": "^3.962.0",
+    "@aws-sdk/client-iam": "^3.962.0",
+    "@aws-sdk/client-kms": "^3.962.0",
+    "@aws-sdk/client-lambda": "^3.962.0",
+    "@aws-sdk/client-rds": "^3.963.0",
+    "@aws-sdk/client-route-53": "^3.962.0",
+    "@aws-sdk/client-s3": "^3.962.0",
+    "@aws-sdk/client-secrets-manager": "^3.962.0",
+    "@aws-sdk/client-sns": "^3.962.0",
+    "@aws-sdk/client-sqs": "^3.962.0",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-select": "^2.1.2",
